force-app/main/default/objects/FFM_Failure_Capture__e/FFM_Failure_Capture__e.object-meta.xml
<CustomObject><label>FFM Failure Capture</label><pluralLabel>FFM Failure Captures</pluralLabel><eventType>HighVolume</eventType><publishBehavior>PublishImmediately</publishBehavior><deploymentStatus>Deployed</deploymentStatus></CustomObject>