force-app/main/default/objects/FFM_Failure_Capture__e/fields/Context_Json__c.field-meta.xml
<CustomField><fullName>Context_Json__c</fullName><label>Context JSON</label><length>255</length><type>Text</type></CustomField>