force-app/main/default/objects/FFM_Failure_Capture__e/fields/Fault_Message__c.field-meta.xml
<CustomField><fullName>Fault_Message__c</fullName><label>Fault Message</label><length>255</length><type>Text</type></CustomField>