force-app/main/default/objects/FFM_Failure_Capture__e/fields/Flow_Name__c.field-meta.xml
<CustomField><fullName>Flow_Name__c</fullName><label>Flow Name</label><length>255</length><type>Text</type></CustomField>