force-app/main/default/objects/FFM_Failure_Capture__e/fields/Object_Type__c.field-meta.xml
<CustomField><fullName>Object_Type__c</fullName><label>Object Type</label><length>80</length><type>Text</type></CustomField>