force-app/main/default/objects/FFM_Failure_Capture__e/fields/Source__c.field-meta.xml
<CustomField><fullName>Source__c</fullName><label>Source</label><length>50</length><type>Text</type></CustomField>